fix
fix scrollbars

--- a/src/scss/description.scss
+++ b/src/scss/description.scss
@@ -1,8 +1,20 @@
 .description {
     margin-bottom: 153px;
-    @media(max-width: 425px){
+
+    @media(max-width: 425px) {
         margin-bottom: 118px;
     }
+
+    ::-webkit-scrollbar-track-piece:end {
+
+        margin-right: 40vw; 
+    }
+    
+    ::-webkit-scrollbar-track-piece:start {
+
+        margin-left: 40vw; 
+    }
+
 }
 
 .container {}
@@ -13,12 +25,15 @@
 
     &__col {}
 }
-.description-header{
+
+.description-header {
     transform: translate(30px, 2px);
-    @media(max-width: 425px){
+
+    @media(max-width: 425px) {
         transform: translate(0px, 3px);
     }
 }
+
 .col {
 
     // .col__description-number
@@ -27,10 +42,7 @@
 
     // .col__description-title
 
-    &__description-title {
-        
-
-    }
+    &__description-title {}
 
     // .col__description-title-alpha
 
@@ -55,14 +67,24 @@
     position: relative;
     display: flex;
     width: 100%;
-overflow: hidden;
-height: 100%;
-overflow-x: auto;
-    // .description-list__item
-    @media(max-width: 425px){
-        transform: translateY(-35px);
-        padding-bottom: 53px;
+    overflow: hidden;
+    height: 100%;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar{
+        height: 6px;   
     }
+    &::-webkit-scrollbar-track-piece{
+        background: #F0E1E1;      /* цвет дорожки */
+    }
+
+    // .description-list__item
+
+    @media(max-width: 425px) {
+        transform: translateY(-35px);
+    padding-bottom: 53px;
+    }
+
     &__item {}
 }
 
@@ -72,11 +94,12 @@ overflow-x: auto;
     box-shadow: 0px 0px 10px 0px rgba(214, 75, 88, 0.2);
     width: 470px;
     height: 100%;
+
     // .description-item__number
-    &:not(:last-child){
+    &:not(:last-child) {
         margin-right: 30px;
     }
-    
+
     &__number {
         margin-bottom: 2px;
         font-family: 'Open Sans';
@@ -99,7 +122,8 @@ overflow-x: auto;
         line-height: 27px;
         color: #322123;
         margin-bottom: 28px;
-        @media(max-width: 425px){
+
+        @media(max-width: 425px) {
             margin-bottom: 0px;
         }
     }
@@ -117,13 +141,18 @@ overflow-x: auto;
         overflow-y: scroll;
         height: 115px;
         /* Текст */
-padding-right: 30px;
+        padding-right: 30px;
         width: 390px;
         color: #968989;
+        &::-webkit-scrollbar{
+            width: 5px;   
+        }
+        &::-webkit-scrollbar-track-piece{
+            background: #F0E1E1;      /* цвет дорожки */
+        }
     }
 }
 
 .description-item-content {
     padding: 45px 40px 75px 40px;
-
 }
